@@ -1,12 +1,7 @@
 {
-  "count": 276,
-  "uniques": 20,
+  "count": 56,
+  "uniques": 19,
   "clones": [
-    {
-      "timestamp": "2022-05-09T00:00:00Z",
-      "count": 220,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 12,
